--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 
     <div class="team">
         <div class="team-top">
-            <h1>Lorem ipsum dolor sit amet.</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In eum sed quos asperiores labore at, laudantium sunt vel hic illum!</p>
+            <h1>Meets our great Creative Teams.</h1>
+            <p>Our journey began witha simple idea make a simple journey make this world more function. We collaborate with organizations that are keen transform</p>
         </div>
 
         <div class="team-bottom">
