--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
     <div class="team">
         <div class="team-top">
-            <h1>Meets our great Creative Teams.</h1>
+            <h1>Meets Our Great Creative Teams</h1>
             <p>Our journey began witha simple idea make a simple journey make this world more function. We collaborate with organizations that are keen transform</p>
         </div>
 
